--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -44,7 +44,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".QRGenerator">
+        <activity
+            android:name=".QRGenerator"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QRCheckin">
         </activity>
     </application>
 
