--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.QRCheckin"
+        android:theme="@style/Base.Theme.QRCheckin"
         tools:targetApi="31">
         <activity
             android:name=".ViewProfileActivity"
