--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -15,17 +15,16 @@
         android:theme="@style/Theme.QRCheckin"
         tools:targetApi="31">
         <activity
+            android:name=".ViewEventActivity"
+            android:exported="false"
+            android:label="@string/title_activity_view_event"
+            android:theme="@style/Theme.QRCheckin" />
+        <activity
             android:name=".ViewProfileActivity"
             android:exported="true" />
         <activity
             android:name=".CreateProfileActivity"
-
-            android:exported="true">
-
-        </activity>
-
             android:exported="true" />
-
         <activity
             android:name=".MainActivity2"
             android:exported="true" />
@@ -60,8 +59,7 @@
             android:name=".QRGenerator"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.QRCheckin">
-        </activity>
+            android:theme="@style/Theme.QRCheckin" />
     </application>
 
 </manifest>
