added checkedin events tracker

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
 
         </activity>
         <activity
+            android:name=".EditEventActivity"
+            android:exported="true"/>
+        <activity
             android:name=".SignedUpEventActivity"
             android:exported="true" />
         <activity
