--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
         </activity>
         <activity
             android:name=".QRGenerator"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.QRCheckin" />
     </application>
