--- a/app/.github/workflows/android.yml
+++ b/app/.github/workflows/android.yml
@@ -21,8 +21,8 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./app/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./app/gradlew build
     - name: Run Unit Tests
-      run: ./gradlew test
+      run: ./app/gradlew test
