--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        path: ./app/app
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
