--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,8 +23,8 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x ./app/gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./app/gradlew build
+      run: ./gradlew build
     - name: Run Unit Tests
-      run: ./app/gradlew test
+      run: ./gradlew test
