--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        path: app
+        path: ./app
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -23,7 +23,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./app/gradlew
     - name: Build with Gradle
       run: ./app/gradlew build
     - name: Run Unit Tests
