--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x ./app/gradlew
+      run: chmod +x app/gradlew
     - name: Build with Gradle
       run: ./app/gradlew build
     - name: Run Unit Tests
