--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        path: app
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -23,6 +25,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x app/gradlew
     - name: Build with Gradle
-      run: ./app/gradlew build
+      workin-directory: app
+      run: ./gradlew build
     - name: Run Unit Tests
+      workin-directory: app
       run: ./app/gradlew test
