--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x app/gradlew
+      run: chmod +x ./app/gradlew
     - name: Build with Gradle
       working-directory: app
       run: ./gradlew build
