--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
       run: chmod +x ./app/gradlew
     - name: Build with Gradle
       working-directory: app
-      run: ./gradlew build
+      run: ./app/gradlew build
     - name: Run Unit Tests
       working-directory: app
       run: ./app/gradlew test
