add POST NOTIFICATIONS to manifest to fix github workflows

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="ndroid.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="com.google.firebase.database.FirebaseDatabase" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
