--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"
+        tools:ignore="NotificationPermission"/>
     <uses-permission android:name="com.google.firebase.database.FirebaseDatabase" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
