--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"
-        tools:ignore="NotificationPermission"/>
+    <uses-permission
+        android:name="android.permission.POST_NOTIFICATIONS"
+        tools:ignore="NotificationPermission" />
     <uses-permission android:name="com.google.firebase.database.FirebaseDatabase" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -26,6 +27,9 @@
         android:theme="@style/Base.Theme.QRCheckin"
         tools:targetApi="31">
         <activity
+            android:name=".BrowseImagesActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="true" />
         <activity
@@ -39,13 +43,17 @@
         <activity
             android:name=".NotificationActivity"
             android:exported="true" />
-        <activity android:name=".ViewEventActivity"
+        <activity
+            android:name=".ViewEventActivity"
             android:exported="true" />
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
         <activity
             android:name=".HomepageOrganizer"
+            android:exported="true" />
+        <activity
+            android:name=".HomepageAdmin"
             android:exported="true" />
         <activity
             android:name=".HomepageActivity"
@@ -55,7 +63,7 @@
             android:exported="true" />
         <activity
             android:name=".EditEventActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".SignedUpEventActivity"
             android:exported="true" />
@@ -74,14 +82,12 @@
             android:name=".CreateEventActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.QRCheckin">
-        </activity>
+            android:theme="@style/Theme.QRCheckin"></activity>
         <activity
             android:name=".QRGenerator"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.QRCheckin" >
-        </activity>
+            android:theme="@style/Theme.QRCheckin"></activity>
     </application>
 
 </manifest>
