--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -27,8 +27,11 @@
         android:theme="@style/Base.Theme.QRCheckin"
         tools:targetApi="31">
         <activity
-            android:name=".BrowseImagesActivity"
+            android:name=".BrowseEventProfile"
             android:exported="false" />
+        <activity
+            android:name=".BrowseImagesActivity"
+            android:exported="true" />
         <activity
             android:name=".EditProfileActivity"
             android:exported="true" />
@@ -82,12 +85,12 @@
             android:name=".CreateEventActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.QRCheckin"></activity>
+            android:theme="@style/Theme.QRCheckin" />
         <activity
             android:name=".QRGenerator"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.QRCheckin"></activity>
+            android:theme="@style/Theme.QRCheckin" />
     </application>
 
 </manifest>
