--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:theme="@style/Base.Theme.QRCheckin"
         tools:targetApi="31">
         <activity
+            android:name=".AdminViewProfileActivity"
+            android:exported="true" />
+        <activity
             android:name=".BrowseProfileAdmin"
             android:exported="true" />
         <activity
